some mark up changes and js additions to courses

--- a/index.html
+++ b/index.html
@@ -52,11 +52,17 @@
         <section id="certificate-course">
             <h2>Web Certificate Courses</h2>
             <ul class="course-buttons">
-                <li><a href="all.html" class="button">All</a></li>
-                <li><a href="cse.html" class="button">CSE</a></li>
-                <li><a href="wdd.html" class="button">WDD</a></li>
+                <li><button class="button filter-button" data-subject="all">All</button></li>
+                <li><button class="button filter-button" data-subject="CSE">CSE</button></li>
+                <li><button class="button filter-button" data-subject="WDD">WDD</button></li>
             </ul>
         </section>
+
+        <section id="completed-courses">
+            <h3>Completed Courses</h3>
+            <div class="completed-buttons"></div>
+        </section>
+
         <footer>
             <ul class="social-media-links">
                 <li><a href="https://github.com/BrytonPalmer/wdd231" target="_blank" rel="noopener" aria-label="GitHub"><img src="images/github-mark.svg" width="44" height="44" alt="GitHub Icon"></a></li>
