font and h2 addition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="scripts" href="scripts/course.js">
     <link rel="scripts" href="scripts/navigation.js">
     <link rel="scripts" href="scripts/date.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -59,7 +62,7 @@
         </section>
 
         <section id="completed-courses">
-            <h3>Completed Courses</h3>
+            <h2>Completed Courses</h2>
             <div class="completed-buttons"></div>
         </section>
 
