--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul class="navigation">
             <li class="nav-button"><a href="index.html">Home</a></li>
-            <li class="nav-button"><a href="chamber.html">Chamber Project</a></li>
+            <li class="nav-button"><a href="chamber/directory.html">Chamber Project</a></li>
             <li class="nav-button"><a href="final.html">Final Project</a></li>
             </ul>
         </nav>
