--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="South Jordan Utah, Chamber of Commerce Home Page">
+    <meta name="description" content="South Jordan Utah, Chamber of Commerce directory Page">
     <meta name="author" content="Bryton Palmer">
-    <title>South Jordan Utah, Chammber of Commerce Home Page</title>
+    <title>South Jordan Utah, Chammber of Commerce Directory Page</title>
     
     <meta property="og:title" content="South Jordan Chamber of Commerce">
-    <meta property="og:description" content="South Jordan Utah, Chamber of Commerce Home Page">
+    <meta property="og:description" content="South Jordan Utah, Chamber of Commerce directory page">
     <meta property="og:url" content="https://brytonpalmer/github.io/wdd231/chamber/directory.html">
     <meta property="og:locale" content="en_US">
     <!-- <meta property="og:image" content="https://www.apple.com/ac/structured-data/images/open_graph_logo.png?202110180743"> -->
@@ -48,6 +48,7 @@
         </nav> 
     </header>
     <main>
+        <h1>Chamber Directory</h1>
         <section id="company-cards" class="cards-container"></section>
     </main>
 
