--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -94,9 +94,9 @@
     </footer>
 
 
-    <script src="scripts/navigation.js"></script>
-    <script src="scripts/cards.js"></script>
-    <script src="scripts/date.js"></script>
+    <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/cards.js" defer></script>
+    <script src="scripts/date.js" defer></script>
 
 </body>
 </html>
