--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,10 +40,10 @@
 
         <nav>
             <ul class="navigation">
-                <li class="nav-button"><a href="join.html">Join</a></li>
-                <li class="nav-button"><a href="directory.html">Directory</a></li>
-                <li class="nav-button"><a href="discover.html">Discover</a></li>
-                <li class="nav-button"><a href="../index.html">Home</a></li>
+                <li class="nav-button"><a href="join.html" class="nav-link">Join</a></li>
+                <li class="nav-button"><a href="directory.html" class="nav-link">Directory</a></li>
+                <li class="nav-button"><a href="discover.html" class="nav-link">Discover</a></li>
+                <li class="nav-button"><a href="../index.html" class="nav-link">Home</a></li>
             </ul>
         </nav> 
     </header>
