--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
     
     <meta property="og:title" content="South Jordan Chamber of Commerce">
     <meta property="og:description" content="South Jordan Utah, Chamber of Commerce directory page">
-    <meta property="og:url" content="https://brytonpalmer/github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://brytonpalmer.github.io/wdd231/chamber/directory.html">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="https://brytonpalmer.github.io/chamber/images/og-selector-banner.png">
     <meta property="og:type" content="website">
@@ -18,13 +18,12 @@
     <link rel="icon" href="images/southjordan-chamber-logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/southjordan-chamber-logo.png">
     <link rel="icon" type="image/svg+xml" href="images/southjordan-chamber-logo.svg">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link rel="scripts" href="scripts/cards.js">
-    <link rel="scripts" href="scripts/navigation.js">
-    <link rel="scripts" href="scripts/date.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
