--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,7 @@
     
     <link rel="icon" href="images/southjordan-chamber-logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/southjordan-chamber-logo.png">
-    <link rel="icon" type="image/svg+xml" href="images/southjordan-chamber-logo.svg">
+    <!-- <link rel="icon" type="image/svg+xml" href="images/southjordan-chamber-logo.svg"> -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 
