--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,8 +26,7 @@
     <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Text:wght@200..700&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -65,17 +64,17 @@
             <ul class="social-links">
             <li>
                 <a href="https://github.com/brytonpalmer" target="_blank" rel="noopener">
-                <img src="images/github-mark.svg" alt="GitHub icon">  GitHub
+                <img src="images/github-mark.svg" alt="GitHub icon">
                 </a>
             </li>
             <li>
                 <a href="https://instagram.com/brytonpalmer" target="_blank" rel="noopener" >
-                <img src="images/instagram-icon.webp" alt="Instagram icon" rel="noopener"> Instagram
+                <img src="images/instagram-icon.webp" alt="Instagram icon" rel="noopener">
                 </a>
             </li>
             <li>
                 <a href="https://linkedin.com/in/brytonpalmer" target="_blank" rel="noopener">
-                <img src="images/linkedin.svg" alt="LinkedIn icon" rel="noopener"> LinkedIn
+                <img src="images/linkedin.svg" alt="LinkedIn icon" rel="noopener">
                 </a>
             </li>
             </ul>
