--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="South Jordan Chamber of Commerce">
     
-    <link rel="icon" href="images/southjordan-chamber-logo.png">
+    <link rel="icon" href="images/southjordan-chamber-logo.png" fetchpriority="high">
     <link rel="icon" type="image/png" sizes="32x32" href="images/southjordan-chamber-logo.png">
     <!-- <link rel="icon" type="image/svg+xml" href="images/southjordan-chamber-logo.svg"> -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
