--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="South Jordan Chamber of Commerce">
     
-    <link rel="icon" href="images/southjordan-chamber-logo.png" fetchpriority="high">
+    <link rel="icon" href="images/southjordan-chamber-logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/southjordan-chamber-logo.png">
     <!-- <link rel="icon" type="image/svg+xml" href="images/southjordan-chamber-logo.svg"> -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
@@ -31,7 +31,7 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="images/southjordan-chamber-logo.png" alt="Site Logo" class="site-logo" />
+            <img src="images/southjordan-chamber-logo.png" alt="Site Logo" class="site-logo" fetchpriority="high"/>
             <span>South Jordan Chamber of Commerce</span>
             <button id="hamburger" aria-label="Toggle Navigation">☰</button>
         </div>
