--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -41,6 +41,11 @@
     </header>
     <main>
         <h1>Chamber Directory</h1>
+        <div class="view-toggle">
+            <button id="gridView">Grid View</button>
+            <button id="listView">List View</button>
+        </div>
+
         <section id="company-cards" class="cards-container"></section>
     </main>
     <footer>
