--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Bryton Palmer">
     <title>South Jordan Utah, Chammber of Commerce Home Page</title>
     <meta property="og:title" content="South Jordan Chamber of Commerce">
-    <meta property="og:description" content="South Jordan Utah, Chamber of Commerce Home page">
+    <meta property="og:description" content="South Jordan Utah, Chamber of Commerce Home page. Landing page to know more about the chamber and join.">
     <meta property="og:url" content="https://brytonpalmer.github.io/wdd231/chamber/index.html">
     <meta property="og:locale" content="en_US">
     <meta property="og:image" content="https://brytonpalmer.github.io/wdd231/chamber/og-selector-banner.png">
@@ -47,7 +47,24 @@
         </nav> 
     </header>
     <main>
-
+        <h1>Welcome to the South Jordan Chamber of Commerce Home Page</h1>
+        <section class="intro">
+            <p>The South Jordan Chamber of Commerce is dedicated to supporting local businesses and fostering a thriving community. Join us to connect, grow, and make a difference in South Jordan, Utah.</p>
+            <img src="images/south-jordan-community.jpg" alt="South Jordan Community" class="intro-image"/>
+        </section>
+        <section class="highlights">
+            <h2>Why Join the Chamber?</h2>
+            <ul>
+                <li>Networking Opportunities</li>
+                <li>Business Resources</li>
+                <li>Community Events</li>
+                <li>Advocacy and Support</li>
+            </ul>
+        </section>
+        <section class="call-to-action">
+            <h2>Get Involved Today!</h2>
+            <p>Ready to take your business to the next level? <a href="join.html">Join the South Jordan Chamber of Commerce</a> and be part of a vibrant business community.</p>
+        </section>
     </main>
     <footer>
     <div class="footer-container">
