--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,10 +47,11 @@
         </nav> 
     </header>
     <main>
+        <img src="images/hero-1-resized.webp" alt="South Jordan Chamber Banner" class="banner-image" fetchpriority="high"/>
         <h1>Welcome to the South Jordan Chamber of Commerce Home Page</h1>
         <section class="intro">
             <p>The South Jordan Chamber of Commerce is dedicated to supporting local businesses and fostering a thriving community. Join us to connect, grow, and make a difference in South Jordan, Utah.</p>
-            <img src="images/south-jordan-community.jpg" alt="South Jordan Community" class="intro-image"/>
+            <img src="images/" alt="South Jordan Community" class="intro-image"/>
         </section>
         <section class="highlights">
             <h2>Why Join the Chamber?</h2>
