--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,7 +36,7 @@
                 <li class="nav-button"><a href="join.html" class="nav-link">Join</a></li>
                 <li class="nav-button"><a href="directory.html" class="nav-link">Directory</a></li>
                 <li class="nav-button"><a href="discover.html" class="nav-link">Discover</a></li>
-                <li class="nav-button"><a href="../index.html" class="nav-link">Course Home</a></li>
+                <!-- <li class="nav-button"><a href="../index.html" class="nav-link">Course Home</a></li> -->
             </ul>
         </nav> 
     </header>
