path updated for spotlight

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,7 +58,7 @@
             <img src="images/" alt="South Jordan Community" class="intro-image"/>
         </section>
         <section id="current-events" class="cards-container">
-            
+
          
 
         </section>
@@ -104,7 +104,7 @@
     <!-- <script src="scripts/cards.js" defer></script> -->
     <script src="scripts/date.js" defer></script>
     <script src="scripts/weather.js" defer></script>
-    <script src="js/home-spotlight.js" defer></script>
+    <script src="scripts/home-spotlight.js" defer></script>
 
 </body>
 </html>
