--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,10 +58,9 @@
             <img src="images/" alt="South Jordan Community" class="intro-image"/>
         </section>
         <section id="current-events" class="cards-container">
-
-         
-
+            <h2>Upcoming Events in South Jordan</h2>
         </section>
+
         <section id="spotlight" class="cards-container"></section>
         
     </main>
@@ -105,6 +104,8 @@
     <script src="scripts/date.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/home-spotlight.js" defer></script>
+    <script src="scripts/events.js" defer></script>
+
 
 </body>
 </html>
