--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -47,7 +47,8 @@
             <button id="listView">List View</button>
         </div>
 
-        <section id="company-cards" class="cards-container"></section>
+        <section id="company-cards" class="card"></section>
+        <!-- cards-container -->
     </main>
     <footer>
     <div class="footer-container">
