on click resolution

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,13 +28,8 @@
         <div class="header-top">
             <img src="images/southjordan-chamber-logo.png" alt="Site Logo" class="site-logo" fetchpriority="high"/>
             <span>South Jordan Chamber of Commerce</span>
-            <nav>
-                <div class="ham-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </nav>
+            <button id="hamburger">☰</button>
+
         </div>
         <nav>
             <ul class="navigation">
@@ -50,7 +45,7 @@
         <div class="hero">
             <div class="hero-content">
                 <h1>Welcome to the South Jordan Chamber of Commerce Home Page</h1>
-                <button onclick="location.href='join.html'" class="hero-button">Join Now</button>
+                <button id="join-button" class="hero-button">Join Now</button>
             </div>
         </div>
 
@@ -124,7 +119,7 @@
     </div>
     </footer>
     <script src="scripts/navigation.js" defer></script>
-    <!-- <script src="scripts/cards.js" defer></script> -->
+    <script scr="scripts/main.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/home-spotlight.js" defer></script>
