--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,7 +64,7 @@
                     <section class="card">
                     <p id="current-temp"></p>
                     <figure>
-                        <img id="weather-icon" alt="Weather icon">
+                        <img id="weather-icon" alt="Weather icon" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
                         <figcaption id="figcaption"></figcaption>
                     </figure>
                     </section>
@@ -123,7 +123,7 @@
     </div>
     </footer>
     <script src="scripts/navigation.js" defer></script>
-    <script scr="scripts/main.js" defer></script>
+    <script src="scripts/main.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/home-spotlight.js" defer></script>
