--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,7 +28,9 @@
         <div class="header-top">
             <img src="images/southjordan-chamber-logo.png" alt="Site Logo" class="site-logo" fetchpriority="high"/>
             <span>South Jordan Chamber of Commerce</span>
-            <button id="hamburger" aria-label="Toggle Navigation">☰</button>
+            <button id="hamburger" aria-label="Toggle navigation">
+                <span id="hamburger-icon">☰</span>
+            </button>
         </div>
         <nav>
             <ul class="navigation">
