--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
         </div>
         <nav id="mobile-nav" class="hidden">
             <ul class="navigation">
-                <li class="nav-button"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-button"><a href="index.html" class="nav-link active">Home</a></li>
                 <li class="nav-button"><a href="join.html" class="nav-link">Join</a></li>
                 <li class="nav-button"><a href="directory.html" class="nav-link">Directory</a></li>
                 <li class="nav-button"><a href="discover.html" class="nav-link">Discover</a></li>
