--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
 <body>
   <header>
     <div class="header-top">
-      <img src="images/southjordan-chamber-logo.png" alt="South Jordan Chamber of Comerce logo" class="site-logo" fetchpriority="high"/>
+      <img src="images/southjordan-chamber-logo.png" alt="South Jordan Chamber of Commerce logo" class="site-logo" fetchpriority="high"/>
       <span>South Jordan Chamber of Commerce</span>
       <button id="hamburger" aria-label="Toggle navigation">
         <span id="hamburger-icon">☰</span>
