--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -104,7 +104,7 @@
       card.classList.add(`card${i+1}`);
       card.innerHTML = `
         <h2>${place.name}</h2>
-        <figure><img src="${place.image}" alt="${place.name}"></figure>
+        <figure><img src="${place.image}" alt="${place.name}" loading="lazy"></figure>
         <address>${place.address}</address>
         <p>${place.description}</p>
         <button>Learn More</button>
