photos, js, css, html changes

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,8 +51,10 @@
     </nav> 
   </header>
   <main>
+    <div id="page-layout">
     <div id="visit-message"></div>
     <section class="cards"></section>
+    </div>
   </main>
   <footer>
     <div class="footer-container">
