js, and image delivery

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -94,7 +94,7 @@
 
   <!-- Scripts -->
   <script src="scripts/navigation.js" defer></script>
-  <script src="scripts/cards.js" defer></script>
+  <!-- <script src="scripts/cards.js" defer></script> -->
   <script src="scripts/date.js" defer></script>
   <script type="module">
     import { places } from "./data/discover.mjs";
