--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="pricing_services.html">Services</a></li>
                 <li><a href="diy_tips.html">Blog</a></li>
             </ul>
