--- a/final_project/index.html
+++ b/final_project/index.html
@@ -26,7 +26,7 @@
 
         <nav class="nav_menu_items">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="pricing_services.html">Services</a></li>
