--- a/final_project/index.html
+++ b/final_project/index.html
@@ -15,6 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <meta property="og:title" content="Clean Sweep">
+    <meta property="og:description" content="Clean Sweep is a Cleaning Service for all your household needs">
+    <meta property="og:url" content="https://cleansweep.com">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="images/clean_sweep_logo.webp">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Clean Sweep">
 </head>
 <body>
     <header>
