--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -29,9 +29,9 @@
         <div class="logo_container">
         <img src="images/clean_sweep_logo.webp" alt="Clean Sweep company logo">
         </div>
-            <button class="hamburger" aria-label="Toggle navigation">
-                ☰
-            </button>
+            <button id="hamburger" aria-label="Toggle navigation">
+                <span id="hamburger-icon">☰</span>
+            </button>/button>
         <nav class="nav_menu_items">
             <ul>
                 <li><a href="index.html">Home</a></li>
