--- a/final_project/index.html
+++ b/final_project/index.html
@@ -29,11 +29,9 @@
         <div class="logo_container">
         <img src="images/clean_sweep_logo.webp" alt="Clean Sweep company logo">
         </div>
-
-            <button class="hamburger" aria-label="Toggle navigation">
-                ☰
+            <button id="hamburger" aria-label="Toggle navigation">
+                <span id="hamburger-icon">☰</span>
             </button>
-
         <nav class="nav_menu_items">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
