--- a/final_project/pricing_services.html
+++ b/final_project/pricing_services.html
@@ -29,8 +29,8 @@
         <div class="logo_container">
         <img src="images/clean_sweep_logo.webp" alt="Clean Sweep company logo">
         </div>
-            <button class="hamburger" aria-label="Toggle navigation">
-                ☰
+            <button id="hamburger" aria-label="Toggle navigation">
+                <span id="hamburger-icon">☰</span>
             </button>
         <nav class="nav_menu_items">
             <ul>
